# cao-profile-collector

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
migrations/2020-07-17-194400_init/: up.sql
migrations/2020-07-18-165844_make_records_unique/: down.sql  up.sql
migrations/2020-07-18-182549_add_total/: down.sql  up.sql
migrations/2020-07-18-212555_add_updated/: down.sql  up.sql
migrations/2020-07-19-121020_fix_updated_trigger/: down.sql  up.sql
src/: main.rs
